# hooyodex

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml
.codex/: config.toml  prompt.md
.codex/skills/codex-live-turns/: SKILL.md
.codex/skills/codexclaw-service-restart/: SKILL.md
.codex/skills/codexclaw-service-restart/agents/: openai.yaml
.codex/skills/codexclaw-service-restart/assets/plists/: com.codexclaw.agent.plist  com.codexclaw.agent.plist.template  dev.codexclaw.agent.plist  (+1 more)
.codex/skills/codexclaw-service-restart/references/: launchd-layout.md  recovery-playbook.md  runtime-layout.md
.codex/skills/codexclaw-service-restart/scripts/: detect-active-service.sh  restart-launchd-service.sh  restart-systemd-service.sh  restart_codexclaw_service.sh
.codex/skills/hooyodex-service-restart/: SKILL.md
.codex/skills/hooyodex-service-restart/agents/: openai.yaml
.codex/skills/hooyodex-service-restart/references/: launchd-layout.md  recovery-playbook.md  runtime-layout.md
.codex/skills/hooyodex-service-restart/scripts/: detect-active-service.sh  restart-launchd-service.sh  restart-lock.sh  restart-systemd-service.sh  restart_hooyodex_service.sh
.codex/skills/telegram-bridge-testing/: SKILL.md
deploy/: codexclaw.service  com.codexclaw.agent.plist  com.hooyodex.agent.plist  hooyodex.service
scripts/: install-service.sh  reload-service.sh  restart-service.sh
src/: app.rs  approval.rs  codex.rs  config.rs  main.rs  markdown.rs  service.rs  state.rs  telegram.rs  transcription.rs
src/channels/: mod.rs  whatsapp.rs
(+6 files in other folders)
